public/css/juxtagraph.css
html, body {
    height: 100%;
}

#paintCanvas {
    position: fixed;
    top: 126px;
    left: 0px;
    z-index: -1;
    border: 2px solid blue;
}

.jux-back{
    height: 20px;
}

.scroll-img {
    margin-bottom: 400px;
}

.image-list {
    list-style-type: none;
    text-align: center;
}


/*////////////////////////////////////////
///////////////   JUXTAGRAPH  ////////////
///////////////////////////////////////*/

.jux-intro{
    margin-top: 48vh;
    text-align: center;
}

.jux-intro p{
    margin-top: 5px;
}

.jux-intro h4{
    margin: 0;
}

.jux-scroll-hint{
    display: block;
    text-align: center;
    margin-top: 220px;
    margin-bottom: 100px;
}

.jux-scroll-hint img{
    width: 20px;
    display: block;
    margin: auto;
    margin-top: 10px;
}



/*/////////////////////////////
     TOP OF EXPORT PANEL    
/////////////////////////////*/

.jux-back-button{
    background-color: white;
    padding: 15px;
    text-align: left;
    /*font-family: Montserrat, Helvetica, Sans-Serif;*/
    font-size: 20px;
    border-top: 1px solid #B3B3B3;
    display: block;
    display: none;
}

.jux-back-button img{
    height: 17px;
    margin-right: 10px;
    margin-bottom: -2px;
    margin-left: 10px;
}

.jux-back-button a{
    color: #999999;
}

.description {
    font-family: 'Montserrat-Light', Montserrat, Helvetica, Sans-Serif;
    -webkit-font-smoothing: antialiased;
    font-size: 15px;

    vertical-align: top;
    padding: 15px;
    width: 100vw;
    /*height: 72px;*/
    z-index: 100;

    resize: none;
    border-left: none;
    border-right: none;
    border-top-color: #B3B3B3;
    border-bottom-color: #B3B3B3;
    /*display: block;*/
    display: none;
}


/*/////////////////////////////
     BOTTOM OF EXPORT PANEL    
/////////////////////////////*/

.export-panel{
    display: none;

    position: fixed;
    bottom:0;
    left:0;
    right:0;
    width: 100vw;
     -webkit-backface-visibility:hidden;
    padding: 0;
    
    background-color: white;
    border-top: 1px solid #B3B3B3;
}

.export-panel a {
    text-decoration: none;
}

.share-panel{
    padding: 22px;
    padding-left: 43px;
    color: #999999;
    font-size: 20px;
}

.share-panel img{
    height: 23px;
    margin-left: 46px;
    margin-bottom: -4px;

}

.export-button{
    padding: 20px;
    width: 100vw;
    height: 22px;
    display: block;

    background-color: #1B53C2;
    color: white;
    font-family: Montserrat, Helvetica, Sans-Serif;
    -webkit-font-smoothing: antialiased;
    font-size: 17px;
    text-align: center;
    /*line-height: 22px;*/
    /*vertical-align: text-top;*/
}

/*"Add to gallery"*/
.button-label{
    margin-right: 30px;
    margin-top: 1px;
    /*display: inline-block;*/

}

.button-label img {
    height: 12px;
    margin-left: 10px;
}

